2008-09-02  Csaba Osztrogonac  <oszi@inf.u-szeged.hu>

Reviewed by Darin Adler.

        Bug 20296: OpcodeStats doesn't build on platforms which don't have mergesort().
        <https://bugs.webkit.org/show_bug.cgi?id=20296>

        * VM/Opcode.cpp:
        (KJS::OpcodeStats::~OpcodeStats): mergesort() replaced with qsort()

Canonical link: https://commits.webkit.org/28449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36048 268f45cc-cd09-0410-ab3c-d52691b4dbfc